[tool.poetry]
name = "api-python"
version = "0.1.0"
description = "Refactor of golang api in python."
authors = ["Dzioba <stanislaw.dzioba@outlook.com>"]
readme = "README.md"
packages = [{include = "api_python"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
sqlalchemy = "^2.0.13"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
starlette = "^0.26.1"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
